--- a/semesterarbeit/package.json
+++ b/semesterarbeit/package.json
@@ -17,6 +17,8 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/supabase": "^1.1.3",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "daisyui": "^4.7.3",
     "eslint": "^8.53.0",
     "nuxt": "^3.8.1",
     "typescript": "^5.2.2"
