--- a/semesterarbeit/package.json
+++ b/semesterarbeit/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "engines": {
-    "node": "18.x"
+    "node": ">=20.10.0"
   },
   "scripts": {
     "dev": "nuxi dev",
@@ -25,5 +25,10 @@
   },
   "resolutions": {
     "consola": "^3.0.0"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
+    "cypress": "^13.7.1",
+    "pinia": "^2.1.7"
   }
 }
